Fix overflow bug for a large number in display

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     justify-content: flex-end;
     background-color: yellow;
     margin-bottom: 10px;
-    font-size: 50px;
+    font-size: 43px;
     height: 80px;
 }
 
